--- a/app/assets/stylesheets/autotune/_icons.scss
+++ b/app/assets/stylesheets/autotune/_icons.scss
@@ -30,45 +30,3 @@
     }
   }
 }
-
-.icon-edit {
-  &:after { content: "\e065"; }
-}
-.icon-preview {
-  &:after { content: "\e105"; }
-}
-.icon-delete {
-  &:after { content: "\e020"; }
-}
-.icon-refresh {
-  &:after { content: "\e031"; }
-}
- //alert icons
-.icon-ok,
-.icon-alert,
-.icon-info {
-  font-size: 11px;
-  margin: 0 3px 0 0;
-}
-
-.icon-ok, .glyphicon-ok {
-  color: color(positive);
-  // &:after {
-  //   content: "\e013";
-  //   color: color(positive);
-  // }
-}
-.icon-alert, .glyphicon-warning-sign, .glyphicon-alert {
-  color: color(negative);
-  // &:after {
-  //   content: "\e209";
-  //   color: color(negative);
-  // }
-}
-.icon-info, .glyphicon-info-sign {
-  color: color(cautionary);
-  // &:after {
-  //   content: "\e086";
-  //   color: color(cautionary);
-  // }
-}
